examples/errors/type_error.zirc
let result = 5 + "hello"
show(result)